# ctru-rs

./: Cargo.toml
src/: ascii.rs  lib.rs  path.rs
src/sys/: wtf8.rs
