[package]
authors = ["Ronald Kinard <furyhunter600@gmail.com>"]
build = "build.rs"
description = "A safe wrapper around smealum's ctrulib."
license = "https://en.wikipedia.org/wiki/Zlib_License"
links = "ctru"
name = "ctru-rs"
version = "0.5.0"

[lib]
crate-type = ["rlib"]
name = "ctru"

[dependencies.ctru-sys]
git = "https://github.com/FenrirWolf/ctru-sys"

[dependencies.std]
git = "https://github.com/FenrirWolf/ctr-std"
branch = "refactor"

[dependencies.bitflags]
version = "0.7.0"
